<resources>
    <string name="app_name">VkTestApp</string>
    <integer name="com_vk_sdk_AppId">5610917</integer>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description_header">Header</string>
    <string name="drawer_second_item_name">User</string>
    <string name="drawer_first_item_name">AudioList</string>
    <string name="toolbar_search">Search</string>
    <string name="drawer_group_name">Communicate</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_about_item">About app</string>
</resources>
